core: make sure Environment fields passed in for transient units are properly written to unit files

https://bugs.freedesktop.org/show_bug.cgi?id=76744